--- a/style.css
+++ b/style.css
@@ -135,6 +135,10 @@ header .container {
   height: 460px;
   border: 4px solid #c1c1c1;
   border-radius: 10px;
+  object-fit: contain;
+  width: 50%;
+  height: 50%;
+  margin-left: 70px;
 }
 
 .btn:hover {
